# artar-fe

./: .env.example  README.md  pyproject.toml  requirements.txt
artifacts/sample_runs/: case_001_execution_log.jsonl  case_001_findings.csv  case_001_report.json  case_001_report.md
artifacts/sample_runs/case_001/: execution_log.jsonl  findings.csv  judge_summary.txt  report.json  report.md
demo_case/: case_001.txt
docs/: ACCURACY_REPORT.md  DATASET_DOCUMENTATION.md  DEMO_SCRIPT.md  NOVEL_CONTRIBUTION.md  SECURITY_GUARDRAILS.md
prompts/: planning.md  reporting.md  verification.md
run/: build_judge_summary.py  run_case.py  run_demo_case.sh
src/artar_fe/: artar_core.py  case_loader.py  config.py  evidence_model.py  guardrails.py  logger.py  main.py  narrative_builder.py  orchestrator.py  planner.py  replan.py  report_builder.py  state_store.py  tool_router.py  verifier.py
src/artar_fe/tool_wrappers/: __init__.py  timeline_tools.py
tests/: test_finding_traceability.py  test_guardrails.py  test_report_contract.py  test_self_correction.py
